--- a/Week 1/Base.lproj/Main.storyboard
+++ b/Week 1/Base.lproj/Main.storyboard
@@ -34,6 +34,10 @@
                                     <action selector="showMessagePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9ew-9Z-iuU"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ay_102510013.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="KIA-f6-sFl">
+                                <rect key="frame" x="40" y="181" width="240" height="350"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -53,4 +57,7 @@
             <point key="canvasLocation" x="-58.125" y="98.239436619718305"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ay_102510013.jpg" width="545.505859375" height="363.38824462890625"/>
+    </resources>
 </document>
